--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import "highlight.js/styles/monokai-sublime.css";
+@import "katex/dist/katex.css";
+@import "react-quill/dist/quill.snow.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
