--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-@import "highlight.js/styles/monokai-sublime.css";
-@import "katex/dist/katex.css";
-@import "react-quill/dist/quill.snow.css";
+@import 'highlight.js/styles/monokai-sublime.css';
+@import 'katex/dist/katex.css';
+@import 'react-quill/dist/quill.snow.css';
 
 @tailwind base;
 @tailwind components;
